加载器使用方法，例如：css-loader和style-loader

--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,10 @@
   "version": "1.0.0",
   "description": "webpack tutorials",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
