--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
   "main": "index.js",
   "devDependencies": {
     "css-loader": "^0.23.1",
-    "style-loader": "^0.13.0"
+    "style-loader": "^0.13.0",
+    "webpack-dev-server": "^3.0.0-alpha6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
