--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "webpack-dev-server": "^3.0.0-alpha6"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack-dev-server --inline"
   },
   "keywords": [
     "react",
