--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   "main": "index.js",
   "devDependencies": {
     "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.14.0",
     "style-loader": "^0.13.0",
     "webpack-dev-server": "^3.0.0-alpha6"
   },
